# diving-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README-zh.md  README.md  config.yml  install.sh
.github/workflows/: publish.yml  test.yml  upload_asset.sh
hooks/: pre-commit
src/: controller.rs  dist.rs  error.rs  main.rs  middleware.rs  ui.rs
src/config/: config.rs  load_config.rs  mod.rs
src/image/: docker.rs  fs.rs  image.rs  layer.rs  mod.rs  oci_image.rs
src/store/: blob.rs  mod.rs
src/task_local/: macros.rs  mod.rs
src/ui/: files.rs  image_detail.rs  layer_detail.rs  layers.rs  mod.rs  util.rs
src/util/: http.rs  mod.rs
web/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.css  App.module.css  App.tsx  index.css
web/src/i18n/: en.ts  index.ts  zh.ts
