[package]
name = "diving"
version = "0.7.0"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
keywords = ["diving", "image", "dive"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
axum-client-ip = "0.7.0"
bytes = "1.10.1"
bytesize = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
config = "0.15.11"
crossterm = "0.28.1"
futures = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
home = "0.5.11"
http = "1.3.1"
humantime = "2.2.0"
libflate = "2.1.0"
lru = "0.12.5"
mime = "0.3.17"
mime_guess = "2.0.5"
nanoid = "0.4.0"
once_cell = "1.21.1"
pad = "0.1.6"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rust-embed = { version = "8.6.0", features = ["compression", "mime-guess"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
signal-hook = { version = "0.3.17", default-features = false }
signal-hook-registry = "1.4.2"
snafu = "0.8.5"
substring = "1.4.5"
tar = "0.4.44"
tempfile = "3.19.1"
time = "0.3.40"
tokio = { version = "1.44.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
] }
tokio-cron-scheduler = "0.13.0"
tower = { version = "0.5.2", features = ["timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
unicode-width = "0.2.0"
unix_mode = "0.1.4"
zstd = "0.13.2"

[profile.release]
codegen-units = 1
lto = true
