[package]
name = "diving"
version = "0.7.3"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
keywords = ["diving", "image", "dive"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
axum-client-ip = "1.3.1"
bytes = "1.11.1"
bytesize = { version = "2.3.1", features = ["serde"] }
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
config = "0.15.22"
crossterm = "0.29.0"
futures = "0.3.32"
glob = "0.3.3"
hex = "0.4.3"
home = "0.5.12"
http = "1.4.0"
humantime = "2.3.0"
libflate = "2.2.1"
lru = "0.16.3"
mime = "0.3.17"
mime_guess = "2.0.5"
nanoid = "0.4.0"
once_cell = "1.21.4"
pad = "0.1.6"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "json",
] }
rust-embed = { version = "8.11.0", features = ["compression", "mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
signal-hook = { version = "0.4.3", default-features = false }
signal-hook-registry = "1.4.8"
snafu = "0.9.0"
substring = "1.4.5"
tar = "0.4.45"
tempfile = "3.27.0"
textwrap = "0.16.2"
time = "0.3.47"
tokio = { version = "1.50.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "fs",
] }
tokio-cron-scheduler = "0.15.1"
tower = { version = "0.5.3", features = ["timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }
unicode-width = "0.2.2"
unix_mode = "0.1.4"
zstd = "0.13.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
